// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils / cssSnapshots with a Bootstrap import should find external files 1`] = `"bootstrap-module__test---WRms9"`;

exports[`utils / cssSnapshots with a custom renderer should process a file and log 1`] = `
Object {
  "exampleFileContents": "exampleFileContents__exampleFileContents---e3Nf2",
  "exampleFileName": "exampleFileContents__exampleFileName---yg7Zl",
}
`;

exports[`utils / cssSnapshots with baseUrl and paths in compilerOptions sass should find the files 1`] = `
Object {
  "big-font": "tsconfig-paths-module__big-font---3FOK9",
  "class-with-mixin": "tsconfig-paths-module__class-with-mixin---Uo34z",
  "public-module": "tsconfig-paths-module__public-module---2IHe1",
}
`;

exports[`utils / cssSnapshots with file 'empty.module.less' createExports should create an exports file 1`] = `
"declare let classes: {

};
export default classes;
"
`;

exports[`utils / cssSnapshots with file 'empty.module.less' getClasses should return an object matching expected CSS 1`] = `Object {}`;

exports[`utils / cssSnapshots with file 'empty.module.less' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let classes: {

};
export default classes;

export const __cssModule: true;
export type AllClassNames = '';"
`;

exports[`utils / cssSnapshots with file 'empty.module.sass' createExports should create an exports file 1`] = `
"declare let classes: {

};
export default classes;
"
`;

exports[`utils / cssSnapshots with file 'empty.module.sass' getClasses should return an object matching expected CSS 1`] = `Object {}`;

exports[`utils / cssSnapshots with file 'empty.module.sass' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let classes: {

};
export default classes;

export const __cssModule: true;
export type AllClassNames = '';"
`;

exports[`utils / cssSnapshots with file 'empty.module.scss' createExports should create an exports file 1`] = `
"declare let classes: {

};
export default classes;
"
`;

exports[`utils / cssSnapshots with file 'empty.module.scss' getClasses should return an object matching expected CSS 1`] = `Object {}`;

exports[`utils / cssSnapshots with file 'empty.module.scss' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let classes: {

};
export default classes;

export const __cssModule: true;
export type AllClassNames = '';"
`;

exports[`utils / cssSnapshots with file 'empty.module.styl' createExports should create an exports file 1`] = `
"declare let classes: {

};
export default classes;
"
`;

exports[`utils / cssSnapshots with file 'empty.module.styl' getClasses should return an object matching expected CSS 1`] = `Object {}`;

exports[`utils / cssSnapshots with file 'empty.module.styl' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let classes: {

};
export default classes;

export const __cssModule: true;
export type AllClassNames = '';"
`;

exports[`utils / cssSnapshots with file 'import.module.css' createExports should create an exports file 1`] = `
"declare let classes: {
'classA': string;
  'ClassB': string;
  'class-c': string;
  'class_d': string;
  'parent': string;
  'childA': string;
  'childB': string;
  'nestedChild': string;
  'fadeIn': string;
};
export default classes;
export let classA: string;
export let ClassB: string;
export let parent: string;
export let childA: string;
export let childB: string;
export let nestedChild: string;
export let fadeIn: string;
"
`;

exports[`utils / cssSnapshots with file 'import.module.css' getClasses should return an object matching expected CSS 1`] = `
Object {
  "ClassB": "import-module__ClassB---2LsIz",
  "childA": "import-module__childA---2AUKk",
  "childB": "import-module__childB---1z-Zh",
  "class-c": "import-module__class-c---2JDAJ",
  "classA": "import-module__classA---2fO5r",
  "class_d": "import-module__class_d---2Dims",
  "fadeIn": "__import_module_css__fadeIn",
  "nestedChild": "import-module__nestedChild---1ZDxw",
  "parent": "import-module__parent---2kdvO",
}
`;

exports[`utils / cssSnapshots with file 'import.module.css' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let classes: {
'classA': string;
  'ClassB': string;
  'class-c': string;
  'class_d': string;
  'parent': string;
  'childA': string;
  'childB': string;
  'nestedChild': string;
  'fadeIn': string;
};
export default classes;
export let classA: string;
export let ClassB: string;
export let parent: string;
export let childA: string;
export let childB: string;
export let nestedChild: string;
export let fadeIn: string;

export const __cssModule: true;
export type AllClassNames = 'classA' | 'ClassB' | 'class-c' | 'class_d' | 'parent' | 'childA' | 'childB' | 'nestedChild' | 'fadeIn';"
`;

exports[`utils / cssSnapshots with file 'import.module.less' createExports should create an exports file 1`] = `
"declare let classes: {
'nested-class-parent': string;
  'child-class': string;
  'selector-blue': string;
  'selector-green': string;
  'selector-red': string;
  'column-1': string;
  'column-2': string;
  'column-3': string;
  'column-4': string;
  'color-set': string;
};
export default classes;
"
`;

exports[`utils / cssSnapshots with file 'import.module.less' getClasses should return an object matching expected CSS 1`] = `
Object {
  "child-class": "import-module__child-class---2XACw",
  "color-set": "import-module__color-set---9xoPb",
  "column-1": "import-module__column-1---3R-BM",
  "column-2": "import-module__column-2---J0ZdX",
  "column-3": "import-module__column-3---3_589",
  "column-4": "import-module__column-4---SlPDz",
  "nested-class-parent": "import-module__nested-class-parent---14g9m",
  "selector-blue": "import-module__selector-blue---2JSaB",
  "selector-green": "import-module__selector-green---1cLL8",
  "selector-red": "import-module__selector-red---2T6zy",
}
`;

exports[`utils / cssSnapshots with file 'import.module.less' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let classes: {
'nested-class-parent': string;
  'child-class': string;
  'selector-blue': string;
  'selector-green': string;
  'selector-red': string;
  'column-1': string;
  'column-2': string;
  'column-3': string;
  'column-4': string;
  'color-set': string;
};
export default classes;

export const __cssModule: true;
export type AllClassNames = 'nested-class-parent' | 'child-class' | 'selector-blue' | 'selector-green' | 'selector-red' | 'column-1' | 'column-2' | 'column-3' | 'column-4' | 'color-set';"
`;

exports[`utils / cssSnapshots with file 'import.module.styl' createExports should create an exports file 1`] = `
"declare let classes: {
'foo': string;
  'bar': string;
  'baz': string;
  'col-1': string;
  'col-2': string;
  'col-3': string;
  'local-class-1': string;
  'inside-local': string;
  'inside-1-name-2': string;
  'inside-2-name-1': string;
};
export default classes;
export let foo: string;
export let bar: string;
export let baz: string;
"
`;

exports[`utils / cssSnapshots with file 'import.module.styl' getClasses should return an object matching expected CSS 1`] = `
Object {
  "bar": "import-module__bar---2N4cR",
  "baz": "import-module__baz---6mQbB",
  "col-1": "import-module__col-1---2QW7j",
  "col-2": "import-module__col-2---2CRRS",
  "col-3": "import-module__col-3---17Luq",
  "foo": "import-module__foo---FJflO",
  "inside-1-name-2": "import-module__inside-1-name-2---wLnoq",
  "inside-2-name-1": "import-module__inside-2-name-1---1GRhn",
  "inside-local": "import-module__inside-local---1JuOc",
  "local-class-1": "import-module__local-class-1---3QupT",
}
`;

exports[`utils / cssSnapshots with file 'import.module.styl' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let classes: {
'foo': string;
  'bar': string;
  'baz': string;
  'col-1': string;
  'col-2': string;
  'col-3': string;
  'local-class-1': string;
  'inside-local': string;
  'inside-1-name-2': string;
  'inside-2-name-1': string;
};
export default classes;
export let foo: string;
export let bar: string;
export let baz: string;

export const __cssModule: true;
export type AllClassNames = 'foo' | 'bar' | 'baz' | 'col-1' | 'col-2' | 'col-3' | 'local-class-1' | 'inside-local' | 'inside-1-name-2' | 'inside-2-name-1';"
`;

exports[`utils / cssSnapshots with file 'test.module.css' createExports should create an exports file 1`] = `
"declare let classes: {
'classA': string;
  'ClassB': string;
  'class-c': string;
  'class_d': string;
  'parent': string;
  'childA': string;
  'childB': string;
  'nestedChild': string;
  'fadeIn': string;
};
export default classes;
export let classA: string;
export let ClassB: string;
export let parent: string;
export let childA: string;
export let childB: string;
export let nestedChild: string;
export let fadeIn: string;
"
`;

exports[`utils / cssSnapshots with file 'test.module.css' getClasses should return an object matching expected CSS 1`] = `
Object {
  "ClassB": "test-module__ClassB---G7fhY",
  "childA": "test-module__childA---26dwC",
  "childB": "test-module__childB---13lLy",
  "class-c": "test-module__class-c---3Ouzp",
  "classA": "test-module__classA---KAOw8",
  "class_d": "test-module__class_d---3pjDe",
  "fadeIn": "__test_module_css__fadeIn",
  "nestedChild": "test-module__nestedChild---v7rOR",
  "parent": "test-module__parent---2tsUX",
}
`;

exports[`utils / cssSnapshots with file 'test.module.css' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let classes: {
'classA': string;
  'ClassB': string;
  'class-c': string;
  'class_d': string;
  'parent': string;
  'childA': string;
  'childB': string;
  'nestedChild': string;
  'fadeIn': string;
};
export default classes;
export let classA: string;
export let ClassB: string;
export let parent: string;
export let childA: string;
export let childB: string;
export let nestedChild: string;
export let fadeIn: string;

export const __cssModule: true;
export type AllClassNames = 'classA' | 'ClassB' | 'class-c' | 'class_d' | 'parent' | 'childA' | 'childB' | 'nestedChild' | 'fadeIn';"
`;

exports[`utils / cssSnapshots with file 'test.module.less' createExports should create an exports file 1`] = `
"declare let classes: {
'nested-class-parent': string;
  'child-class': string;
  'selector-blue': string;
  'selector-green': string;
  'selector-red': string;
  'column-1': string;
  'column-2': string;
  'column-3': string;
  'column-4': string;
  'color-set': string;
};
export default classes;
"
`;

exports[`utils / cssSnapshots with file 'test.module.less' getClasses should return an object matching expected CSS 1`] = `
Object {
  "child-class": "test-module__child-class---1au0d",
  "color-set": "test-module__color-set---bEXmh",
  "column-1": "test-module__column-1---5hXb3",
  "column-2": "test-module__column-2---2ykNv",
  "column-3": "test-module__column-3---2JnAp",
  "column-4": "test-module__column-4---SG3xj",
  "nested-class-parent": "test-module__nested-class-parent---2jIpC",
  "selector-blue": "test-module__selector-blue---2kUKa",
  "selector-green": "test-module__selector-green---hMr6S",
  "selector-red": "test-module__selector-red---2hf4j",
}
`;

exports[`utils / cssSnapshots with file 'test.module.less' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let classes: {
'nested-class-parent': string;
  'child-class': string;
  'selector-blue': string;
  'selector-green': string;
  'selector-red': string;
  'column-1': string;
  'column-2': string;
  'column-3': string;
  'column-4': string;
  'color-set': string;
};
export default classes;

export const __cssModule: true;
export type AllClassNames = 'nested-class-parent' | 'child-class' | 'selector-blue' | 'selector-green' | 'selector-red' | 'column-1' | 'column-2' | 'column-3' | 'column-4' | 'color-set';"
`;

exports[`utils / cssSnapshots with file 'test.module.sass' createExports should create an exports file 1`] = `
"declare let classes: {
'local-class-inside-global': string;
  'local-class': string;
  'local-class-2': string;
  'local-class-inside-local': string;
  'reserved-words': string;
  'default': string;
  'const': string;
  'nested-class-parent': string;
  'child-class': string;
  'nested-class-parent--extended': string;
  'section-1': string;
  'section-2': string;
  'section-3': string;
  'section-4': string;
  'section-5': string;
  'section-6': string;
  'section-7': string;
  'section-8': string;
  'section-9': string;
  'class-with-mixin': string;
};
export default classes;
"
`;

exports[`utils / cssSnapshots with file 'test.module.sass' getClasses should return an object matching expected CSS 1`] = `
Object {
  "child-class": "test-module__child-class---2vfhc",
  "class-with-mixin": "test-module__class-with-mixin---3zUq-",
  "const": "test-module__const---39o_j",
  "default": "test-module__default---h-tcC",
  "local-class": "test-module__local-class---1yStp",
  "local-class-2": "test-module__local-class-2---3xCgt",
  "local-class-inside-global": "test-module__local-class-inside-global---Mznd5",
  "local-class-inside-local": "test-module__local-class-inside-local---1z2Qf",
  "nested-class-parent": "test-module__nested-class-parent---3oyeq",
  "nested-class-parent--extended": "test-module__nested-class-parent--extended---cjRbg",
  "reserved-words": "test-module__reserved-words---3hGie",
  "section-1": "test-module__section-1---2QkaE",
  "section-2": "test-module__section-2---23KHs",
  "section-3": "test-module__section-3---2BttW",
  "section-4": "test-module__section-4---1TrSo",
  "section-5": "test-module__section-5---1PIYZ",
  "section-6": "test-module__section-6---tbEch",
  "section-7": "test-module__section-7---i7uWX",
  "section-8": "test-module__section-8---1jfNT",
  "section-9": "test-module__section-9---1akFT",
}
`;

exports[`utils / cssSnapshots with file 'test.module.sass' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let classes: {
'local-class-inside-global': string;
  'local-class': string;
  'local-class-2': string;
  'local-class-inside-local': string;
  'reserved-words': string;
  'default': string;
  'const': string;
  'nested-class-parent': string;
  'child-class': string;
  'nested-class-parent--extended': string;
  'section-1': string;
  'section-2': string;
  'section-3': string;
  'section-4': string;
  'section-5': string;
  'section-6': string;
  'section-7': string;
  'section-8': string;
  'section-9': string;
  'class-with-mixin': string;
};
export default classes;

export const __cssModule: true;
export type AllClassNames = 'local-class-inside-global' | 'local-class' | 'local-class-2' | 'local-class-inside-local' | 'reserved-words' | 'default' | 'const' | 'nested-class-parent' | 'child-class' | 'nested-class-parent--extended' | 'section-1' | 'section-2' | 'section-3' | 'section-4' | 'section-5' | 'section-6' | 'section-7' | 'section-8' | 'section-9' | 'class-with-mixin';"
`;

exports[`utils / cssSnapshots with file 'test.module.scss' createExports should create an exports file 1`] = `
"declare let classes: {
'local-class-inside-global': string;
  'local-class': string;
  'local-class-2': string;
  'local-class-inside-local': string;
  'reserved-words': string;
  'default': string;
  'const': string;
  'nested-class-parent': string;
  'child-class': string;
  'nested-class-parent--extended': string;
  'section-1': string;
  'section-2': string;
  'section-3': string;
  'section-4': string;
  'section-5': string;
  'section-6': string;
  'section-7': string;
  'section-8': string;
  'section-9': string;
  'class-with-mixin': string;
};
export default classes;
"
`;

exports[`utils / cssSnapshots with file 'test.module.scss' getClasses should return an object matching expected CSS 1`] = `
Object {
  "child-class": "test-module__child-class---s-_Mc",
  "class-with-mixin": "test-module__class-with-mixin---1JqB_",
  "const": "test-module__const---28kKv",
  "default": "test-module__default---8gLb1",
  "local-class": "test-module__local-class---1Ju3l",
  "local-class-2": "test-module__local-class-2---3aSgy",
  "local-class-inside-global": "test-module__local-class-inside-global---IVh9J",
  "local-class-inside-local": "test-module__local-class-inside-local---1LKIi",
  "nested-class-parent": "test-module__nested-class-parent---2LnTV",
  "nested-class-parent--extended": "test-module__nested-class-parent--extended---1j85b",
  "reserved-words": "test-module__reserved-words---1mM1m",
  "section-1": "test-module__section-1---11Ic3",
  "section-2": "test-module__section-2---1Uiwc",
  "section-3": "test-module__section-3---2eZeM",
  "section-4": "test-module__section-4---3m8sf",
  "section-5": "test-module__section-5---1MTwN",
  "section-6": "test-module__section-6---szUAt",
  "section-7": "test-module__section-7---2DOBJ",
  "section-8": "test-module__section-8---3qav2",
  "section-9": "test-module__section-9---2EMR_",
}
`;

exports[`utils / cssSnapshots with file 'test.module.scss' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let classes: {
'local-class-inside-global': string;
  'local-class': string;
  'local-class-2': string;
  'local-class-inside-local': string;
  'reserved-words': string;
  'default': string;
  'const': string;
  'nested-class-parent': string;
  'child-class': string;
  'nested-class-parent--extended': string;
  'section-1': string;
  'section-2': string;
  'section-3': string;
  'section-4': string;
  'section-5': string;
  'section-6': string;
  'section-7': string;
  'section-8': string;
  'section-9': string;
  'class-with-mixin': string;
};
export default classes;

export const __cssModule: true;
export type AllClassNames = 'local-class-inside-global' | 'local-class' | 'local-class-2' | 'local-class-inside-local' | 'reserved-words' | 'default' | 'const' | 'nested-class-parent' | 'child-class' | 'nested-class-parent--extended' | 'section-1' | 'section-2' | 'section-3' | 'section-4' | 'section-5' | 'section-6' | 'section-7' | 'section-8' | 'section-9' | 'class-with-mixin';"
`;

exports[`utils / cssSnapshots with file 'test.module.styl' createExports should create an exports file 1`] = `
"declare let classes: {
'foo': string;
  'bar': string;
  'baz': string;
  'col-1': string;
  'col-2': string;
  'col-3': string;
  'local-class-1': string;
  'inside-local': string;
  'inside-1-name-2': string;
  'inside-2-name-1': string;
};
export default classes;
export let foo: string;
export let bar: string;
export let baz: string;
"
`;

exports[`utils / cssSnapshots with file 'test.module.styl' getClasses should return an object matching expected CSS 1`] = `
Object {
  "bar": "test-module__bar---2WWom",
  "baz": "test-module__baz---1Rs9U",
  "col-1": "test-module__col-1---1XP3K",
  "col-2": "test-module__col-2---2nPwS",
  "col-3": "test-module__col-3---3CSSb",
  "foo": "test-module__foo---2pGaO",
  "inside-1-name-2": "test-module__inside-1-name-2---3Zdgw",
  "inside-2-name-1": "test-module__inside-2-name-1---3PYHl",
  "inside-local": "test-module__inside-local---2KzUE",
  "local-class-1": "test-module__local-class-1---3piX9",
}
`;

exports[`utils / cssSnapshots with file 'test.module.styl' with a custom template should transform the generated dts 1`] = `
"/* eslint-disable */
declare let classes: {
'foo': string;
  'bar': string;
  'baz': string;
  'col-1': string;
  'col-2': string;
  'col-3': string;
  'local-class-1': string;
  'inside-local': string;
  'inside-1-name-2': string;
  'inside-2-name-1': string;
};
export default classes;
export let foo: string;
export let bar: string;
export let baz: string;

export const __cssModule: true;
export type AllClassNames = 'foo' | 'bar' | 'baz' | 'col-1' | 'col-2' | 'col-3' | 'local-class-1' | 'inside-local' | 'inside-1-name-2' | 'inside-2-name-1';"
`;

exports[`utils / cssSnapshots with includePaths in sass options should find external file from includePaths 1`] = `
Object {
  "big-font": "include-path-module__big-font---Td7hY",
  "class-with-mixin": "include-path-module__class-with-mixin---1u87_",
}
`;

exports[`utils / cssSnapshots with includePaths in stylus options should find external file from includePaths 1`] = `
Object {
  "external-class": "include-path-module__external-class---ecH0A",
  "include-path": "include-path-module__include-path---2f2uR",
}
`;
